[package]
name = "lbb-trees"
version = "0.1.0"
authors = ["Tony Astolfi <tastolfi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9"
superslice = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
stderrlog = "0.4"

